# cpp-lib-template

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakePresets.json  CMakeWindowsPresets.json  README.md
.github/workflows/: ci.yml
cmake/: silent_copy.cmake  utils.cmake
examples/add/: CMakeLists.txt
tests/: CMakeLists.txt
